# japanese_mahjong_theory

./: Cargo.toml  README.md
src/: analyzer.rs  game.rs  global.rs  interaction.rs  lib.rs  mahjong.rs  main.rs
src/game/: game_manager.rs  mod.rs
src/game/mahjong/: combination.rs  hai.rs  haiyama.rs  mod.rs  player_number.rs  tehai.rs
src/interaction/: command.rs  controller.rs  mod.rs
tests/: test.rs
