[package]
name = "japanese_mahjong_theory"
version = "0.1.0"
authors = ["Nichts Hsu <NichtsVonChaos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.*"
mut_static = "5.0.*"
clap = "2.*"
serde_json = "1.0.*"