[package]
name = "japanese_mahjong_theory"
version = "1.19.0"
authors = ["Nichts Hsu <NichtsVonChaos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.*", features = ["derive"] }
serde_json = "1.0.*"
rustyline = "11.0.0"
