[package]
name = "japanese_mahjong_theory"
version = "1.19.0"
authors = ["Nichts Hsu <NichtsVonChaos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.*", features = ["derive"] }
serde_json = "1.0.*"
rustyline = "14.0.0"

[[bin]]
name = "japanese_mahjong_theory"
path = "src/main.rs"

[lib]
name = "japanese_mahjong_theory"
path = "src/lib.rs"
